--- a/src/quasar-variables.sass
+++ b/src/quasar-variables.sass
@@ -1,8 +1,10 @@
 // FILE (create it): src/quasar-variables.sass
 
-$primary   : #1976D2
+$primary   : #2e7d32
 $secondary : #26A69A
 $accent    : #9C27B0
+
+$white     : #ffffff
 
 $dark      : #1D1D1D
 
@@ -10,3 +12,5 @@ $positive  : #21BA45
 $negative  : #C10015
 $info      : #31CCEC
 $warning   : #F2C037
+
+$brand-primary: $primary
